# PC-AI

./: .gitignore  .prettierignore  .prettierrc.toml  .rgignore  AGENTS.md  ARCHITECTURE.md  Build.ps1  CI-CD-GUIDE.md  CI-CD-SETUP-SUMMARY.md  CLAUDE.TODO.md  CLAUDE.md  CONTRIBUTING.md  CSharp_RustDLL.md  DIAGNOSE.md  DIAGNOSE_LOGIC.md  GEMINI.md  MODELS.md  PC-AI.ps1  PSScriptAnalyzerSettings.psd1  README.md  Run-PesterTests.ps1  Setup-DevEnvironment.ps1  TODO.md  Test-NativeInference.ps1  cliff.toml  clippy.toml  fix-json.patch  fix-tests.patch  fix_prompt_test.diff  lefthook.yml  llm.TODO.md  optimization.TODO.md  patch.diff  patch.py  patch_prompt_test.diff  pr_description.md  revert_prompt_test.diff  rustfmt.toml  sgconfig.yml  taplo.toml  (+2 more)
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.litho/: litho.toml
AI-Media/: cargo.toml  main.py  requirements.txt  setup_cuda.sh
Config/: diagnose-local-optimized.md  driver-registry.json  hvsock-proxy.conf  jules-review-prompts.json  llm-config.json  nvidia-software-registry.json  pcai-functiongemma.json  pcai-inference-server.json  pcai-media-test.json  pcai-media.json  pcai-ollama-benchmark.json  pcai-tooling-benchmarks.json  pcai-tools.json  process-lasso.ai-dev-workstation.json  process-lasso.schema.json  settings.json
Deploy/rust-functiongemma-core/: Cargo.toml
Deploy/rust-functiongemma-core/src/: chat_template.rs  config.rs  error.rs  gpu.rs  lib.rs  lora_utils.rs  model.rs  prompt.rs  safetensors_utils.rs
Deploy/rust-functiongemma-runtime/: Cargo.toml  README.md
Deploy/rust-functiongemma-runtime/Reports/: functiongemma-runtime.addr
Deploy/rust-functiongemma-runtime/src/: auth.rs  config.rs  error.rs  gpu.rs  handlers.rs  inference.rs  lib.rs  main.rs  metrics.rs  model_support.rs  routing.rs  types.rs
Deploy/rust-functiongemma-runtime/tests/: http_router.rs
Modules/: PcaiInference.psd1  PcaiInference.psm1  PcaiMedia.psd1  PcaiMedia.psm1
Native/: build.ps1  check-dll.ps1  test.ps1
Native/pcai_core/: Cargo.toml
Native/pcai_core/.cargo/: config.toml.template
Native/pcai_core/pcai_core_lib/: Cargo.toml  build.rs
Native/pcai_core/pcai_core_lib/src/: functiongemma.rs  hash.rs  json.rs  lib.rs  path.rs  process_lasso.rs  prompt_engine.rs  result.rs  string.rs  tokenizer.rs  vmm_health.rs
Native/pcai_core/pcai_core_lib/src/fs/: mod.rs
Native/pcai_core/pcai_core_lib/src/gpu/: mod.rs  roofline.rs
Native/pcai_core/pcai_core_lib/src/performance/: disk.rs  memory.rs  mod.rs  optimizer.rs  process.rs
Native/pcai_core/pcai_core_lib/src/preflight/: gguf.rs  mod.rs  vram_audit.rs
Native/pcai_core/pcai_core_lib/src/search/: content.rs  duplicates.rs  files.rs  mod.rs  walker.rs
Native/pcai_core/pcai_core_lib/src/system/: logs.rs  mod.rs  path.rs
Native/pcai_core/pcai_core_lib/src/telemetry/: device_codes.rs  disk_health.rs  event_log.rs  mod.rs  network.rs  pnp.rs  process.rs  usb.rs
Native/pcai_core/pcai_core_lib/tests/: preflight_tests.rs
Native/pcai_core/pcai_inference/: Cargo.toml  Invoke-PcaiBuild.ps1  README.md  build.rs  test-cmake-direct.ps1
Native/pcai_core/pcai_inference/.cargo/: config.toml  config.toml.template
Native/pcai_core/pcai_inference/src/: config.rs  lib.rs
Native/pcai_core/pcai_inference/src/backends/: llamacpp.rs  mistralrs.rs  mod.rs
Native/pcai_core/pcai_inference/src/ffi/: mod.rs
Native/pcai_core/pcai_inference/src/http/: mod.rs
Native/pcai_core/pcai_inference/tests/: README.md  backend_selection_test.rs  integration_test.rs
Native/pcai_core/pcai_inference/tests/common/: mod.rs
Native/pcai_core/pcai_inference/tests/ffi/: concurrent_access.rs  error_propagation.rs  memory_safety.rs  mod.rs
Native/pcai_core/pcai_media/: Cargo.toml
Native/pcai_core/pcai_media/examples/: gen_image.rs
Native/pcai_core/pcai_media/src/: config.rs  config.rs.rej  generate.rs  hub.rs  lib.rs  python_fallback.rs  telemetry.rs  understand.rs  upscale.rs
Native/pcai_core/pcai_media/src/ffi/: mod.rs
Native/pcai_core/pcai_media_model/: Cargo.toml
Native/pcai_core/pcai_media_model/src/: config.rs  generation_head.rs  janus_llama.rs  janus_llama_quantized.rs  lib.rs  tensor_utils.rs  vision.rs  vq_vae.rs
Native/pcai_core/pcai_media_model/tests/: vision_tower_contract.rs
Native/pcai_core/pcai_media_server/: Cargo.toml
Native/pcai_core/pcai_media_server/src/: main.rs
Native/pcai_core/pcai_ollama_rs/: Cargo.toml
Native/pcai_core/pcai_ollama_rs/src/: main.rs
Native/pcai_core/pcai_perf_cli/: Cargo.toml
Native/pcai_core/pcai_perf_cli/src/: main.rs
Reports/: API_SIGNATURE_REPORT.json  API_SIGNATURE_REPORT.md  BACKEND_ACCELERATION_RESEARCH_20260328.md  DOC_PIPELINE_REPORT.json  DOC_PIPELINE_REPORT.md  DOC_STATUS.md  FUNCTIONGEMMA_TRAINING_DIAGNOSTICS.md  LLM_OPTIMIZATION_RESEARCH_2026-03-27.md  LOCAL_LLM_QUALITY_ASSESSMENT.md  MEMORY_OPTIMIZATION_PROPOSAL.md  MODEL_BENCHMARK_20260328.md  MOE_MODEL_RESEARCH_20260328.md  PERFORMANCE_ANALYSIS_7B_150TOKS.md  POWERSHELL_EXPORTS.json  PROCESS_LASSO_INTEGRATION_PROPOSAL.md  QLORA_NF4_EVALUATION.md  TOOLS_CATALOG.json  TOOLS_CATALOG.md  TOOL_BACKEND_COVERAGE.json  TOOL_BACKEND_COVERAGE.md  TOOL_SCHEMA_REPORT.json  TOOL_SCHEMA_REPORT.md  detailed-process-data.json  functiongemma_eval_metrics.json  functiongemma_eval_samples.meta.json  llama-bench-20260328.md  llm-benchmark-20260328.json  system-performance-data.json
Scripts/: generate_pcai_eval_notebook.py
Tests/: Demo-ErrorHandling.ps1  Invoke-AllTests.ps1  Invoke-BenchmarkGate.ps1  Invoke-EvalRegression.ps1  Invoke-PortableTests.ps1  Invoke-QualityGate.ps1  PesterConfiguration.psd1  README.md  Verify-NativeHardware.ps1  Verify-StructuredDiagnosis.ps1
Tools/: Bootstrap-ThunderboltPeerRemote.ps1  Collect-DetailedProcessData.ps1  Collect-SystemPerformanceData.ps1  Convert-JanusToGGUF.py  Convert-PytorchToSafetensors.py  Convert-RealESRGAN-to-ONNX.py  Export-OllamaModels.ps1  Find-ThunderboltPeer.ps1  Get-BuildVersion.ps1  Get-JanusProModel.ps1  Get-JulesPRStatus.ps1  Get-PcaiDataServicesStatus.ps1  Get-PcaiModuleStatus.ps1  (+59 more)
(+615 files in other folders)
