[package]
name = "rust-functiongemma-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
thiserror = "2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
safetensors = "0.4"
minijinja = "2"
candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
qlora-rs = { version = "1.0.5", optional = true }
cudarc = { version = "0.19.4", default-features = false, features = ["std", "runtime", "driver", "dynamic-linking", "cuda-version-from-build-system"], optional = true }
candle-flash-attn = { version = "0.9.2", optional = true }
nvml-wrapper = { version = "0.12", optional = true }
tracing = "0.1"

[features]
default = ["cuda", "flash-attn"]
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "qlora-rs",
  "cudarc",
]
flash-attn = ["candle-flash-attn"]
nvml = ["dep:nvml-wrapper"]

[dev-dependencies]
rand = "0.8.5"

[patch.crates-io]
# Patched build.rs: adds --compiler-options /Zc:preprocessor for CUDA 13+ CCCL on MSVC.
# Without this, nvcc fails with "MSVC/cl.exe with traditional preprocessor is used."
candle-kernels = { path = "../vendor/candle-kernels-0.9.2" }
candle-flash-attn = { path = "../vendor/candle-flash-attn-0.9.2" }
