[package]
name = "rust-functiongemma-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_functiongemma_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }
sysinfo = "0.38"

# Optional model/runtime dependencies (enable with --features model)
minijinja = { version = "2", optional = true }
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"], optional = true }
hf-hub = { version = "0.3", optional = true }
safetensors = { version = "0.4", optional = true }
candle-core = { version = "0.9.2", features = ["cuda"], optional = true }
candle-nn = { version = "0.9.2", features = ["cuda"], optional = true }
rust-functiongemma-core = { path = "../rust-functiongemma-core", optional = true, features = ["flash-attn"] }

[features]
default = []
model = [
  "minijinja",
  "tokenizers",
  "hf-hub",
  "safetensors",
  "candle-core",
  "candle-nn",
  "rust-functiongemma-core"
]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
