[package]
name = "pcai-media"
version = "0.1.0"
edition = "2021"
description = "Janus-Pro media pipeline with FFI and HTTP support"
license = "MIT"
lints.workspace = true

[lib]
name = "pcai_media"
crate-type = ["cdylib", "rlib"]

[dependencies]
pcai-media-model = { path = "../pcai_media_model" }
pcai_core_lib = { path = "../pcai_core_lib", default-features = false, optional = true }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

candle-core = { version = "0.9" }
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.4"
tokenizers = "0.20"
image = "0.25"
rand = "0.8"
hf-hub = "0.4"
memmap2 = "0.9"

[features]
default = ["ffi"]
ffi = []
server = ["dep:axum", "dep:tower-http"]
# Enable NVML-based GPU selection without requiring full CUDA candle support.
# This allows `cargo check -p pcai-media --features nvml` on machines that
# have the NVIDIA driver but not the CUDA toolkit.
nvml = ["dep:pcai_core_lib", "pcai_core_lib/nvml"]
cuda = ["candle-core/cuda", "pcai-media-model/cuda", "dep:pcai_core_lib", "pcai_core_lib/nvml"]
flash-attn = ["pcai-media-model/flash-attn"]
upscale = ["dep:ort"]

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["cors", "trace"]
optional = true

[dependencies.ort]
version = "2.0.0-rc.11"
features = ["download-binaries"]
optional = true

[dev-dependencies]
tempfile = "3"
