[package]
name = "pcai-media"
version = "0.1.0"
edition = "2021"
description = "Janus-Pro media pipeline with FFI and HTTP support"
license = "MIT"
lints.workspace = true

[lib]
name = "pcai_media"
crate-type = ["cdylib", "rlib"]

[dependencies]
pcai-media-model = { path = "../pcai_media_model" }
pcai_core_lib = { path = "../pcai_core_lib", default-features = false, optional = true }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

candle-core = { version = "0.9" }
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.4"
tokenizers = "0.20"
image = "0.25"
rand = "0.8"
# Disable ureq (sync HTTP client) to eliminate the ring crate dependency.
# ring requires MSVC cl.exe at build time, which conflicts with sccache in
# CUDA build environments. We use the async tokio/reqwest path instead.
# hub.rs uses hf_hub::api::tokio::ApiBuilder (async, reqwest + native-tls).
hf-hub = { version = "0.5", default-features = false, features = ["tokio"] }
memmap2 = "0.9"

[features]
default = ["ffi"]
ffi = []
server = ["dep:axum", "dep:tower-http"]
# Enable NVML-based GPU selection without requiring full CUDA candle support.
# This allows `cargo check -p pcai-media --features nvml` on machines that
# have the NVIDIA driver but not the CUDA toolkit.
nvml = ["dep:pcai_core_lib", "pcai_core_lib/nvml"]
cuda = ["candle-core/cuda", "pcai-media-model/cuda", "dep:pcai_core_lib", "pcai_core_lib/nvml"]
# Enable cuDNN acceleration for conv1d/conv2d ops via NVIDIA cuDNN v9.
#
# In candle-core 0.9.x the `cudnn` feature gates only convolution operations
# (not fused attention/SDPA).  Janus-Pro uses matmul-based SDPA, so cuDNN
# provides no speedup for the transformer backbone at this version.  The
# feature is kept for forward compatibility: if candle gains cuDNN fused-
# attention support in a future release, enabling this flag will opt in
# automatically.  Use `flash-attn` instead for attention acceleration today.
#
# Building with `cudnn` requires the cuDNN runtime DLL (cudnn64_9.dll) to be
# present in PATH at link time on Windows; nvcc must be available at build time.
cudnn = ["cuda", "candle-core/cudnn", "pcai-media-model/cudnn"]
flash-attn = ["pcai-media-model/flash-attn"]
upscale = ["dep:ort"]

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["cors", "trace"]
optional = true

[dependencies.ort]
version = "2.0.0-rc.11"
features = ["download-binaries"]
optional = true

[dev-dependencies]
tempfile = "3"
