[package]
name = "pcai-media-model"
version = "0.1.0"
edition = "2021"
description = "Janus-Pro model architecture for PC_AI media agent"
license = "MIT"

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.9" }
candle-nn = "0.9"
candle-transformers = "0.9"
candle-flash-attn = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Enable CUDA and cuDNN acceleration.  Requires CUDA Toolkit (nvcc) at build time.
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["cuda", "candle-core/cudnn"]
flash-attn = ["dep:candle-flash-attn"]
