[package]
name = "pcai-media-model"
version = "0.1.0"
edition = "2021"
description = "Janus-Pro model architecture for PC_AI media agent"
license = "MIT"
lints.workspace = true

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.9" }
candle-nn = "0.9"
candle-transformers = "0.9"
candle-flash-attn = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Enable CUDA acceleration.  Requires CUDA Toolkit (nvcc) at build time.
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Enable cuDNN v9 for conv1d/conv2d ops.
#
# In candle-core 0.9.x `cudnn` only accelerates convolutions — NOT attention.
# Janus-Pro's transformer uses matmul-based SDPA, so this feature does not
# improve performance for this model.  Kept for forward compatibility with
# future candle releases that may add cuDNN-fused attention.
cudnn = ["cuda", "candle-core/cudnn"]
flash-attn = ["dep:candle-flash-attn"]
