[package]
name = "pcai-ollama-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config-driven native Ollama runner for PC_AI using ollama-rs"
lints.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ollama-rs.workspace = true
schemars.workspace = true
url.workspace = true
mimalloc = "0.1"

